fixed page alignment

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -48,11 +48,11 @@
   }
 
   .content {
-    height: 100%;
     width: 100%;
     border: 1px solid black;
     border-color: black;
     border-width: 0px;
+    margin-top: 0px !important;
     border-radius: 10px;
     box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
   }
